Refactored XML configuration to use JAXB. This should provide a more robust implementation.